# Azyon

./: readme.md
azyon-ml/: best_model.pth  docker-compose.yaml  pyproject.toml  request.http  scaler.joblib
azyon-ml/src/: api.py  feature_engeneering.py  infer.py  kafka_consumer.py  kafka_service.py  model.py  predict_utils.py  send_email.py  train.py
azyon-ml/src/bpk/: model.py  train.py
docs/sql/: script.sql
mlflow-server/: main.py  pyproject.toml
project/: airflow.cfg
project/dags/: bkp.py  fire_dag_batch.py  fire_dag_kafka.py
