[project]
name = "azyon-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "imblearn>=0.0",
    "kafka-python>=2.2.10",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "scikit-learn>=1.6.1",
    "setuptools>=80.9.0",
    "torch>=2.7.0",
]
